[package]
name = "greentic-session"
version = "0.4.8"
edition = "2024"
rust-version = "1.91"
license = "MIT"
description = "Greentic multi-tenant session manager with in-memory and Redis backends"
repository = "https://github.com/greenticai/greentic-session"
keywords = ["greentic", "session", "multi-tenant", "redis"]
categories = ["data-structures", "asynchronous"]
readme = "README.md"

[features]
default = []
redis = ["dep:redis"]
inmemory = []
schema = ["dep:schemars"]
interfaces = ["dep:greentic-interfaces"]

[dependencies]
greentic-types = "0.4"
greentic-interfaces = { version = "0.4", optional = true }

serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
parking_lot = "0.12"
redis = { version = "1", optional = true }
schemars = { version = "1", optional = true }
sha2 = "0.10"
hex = "0.4"


[dev-dependencies]
proptest = "1"
serde_json = "1"
